added image from dockerhub

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - ${TRACKSIMULATORPATH}/db:/data/db
 
   app:
-    build: .
+    image: tonibous/track-simulator:latest
     volumes:
     - ./src:/app
     - ${TRACKSIMULATOREXPORT}:/data
